completed login page styling improvement by fixing buttons, and removing spacing and changing color #110

--- a/net-project-Revista/wwwroot/css/site.css
+++ b/net-project-Revista/wwwroot/css/site.css
@@ -279,6 +279,16 @@ h3 {
     padding: 0 100px;
 }*/
 
+hr {
+    border: 10px solid black;
+}
+
+orstyling {
+    padding:0px;
+    font-size:45px;
+    font-weight: bold;
+}
+
 .exlogin-section {
     padding: 0 50px;
     margin: 0 50px 25px;
